# xhs-loop-engineer

./: .gitignore  README.md  README_CN.md  __main__.py  cli.py  loop.py  pyproject.toml  start.sh  xhs_loop_engineer.py
.github/workflows/: loop.yml
agents/: __init__.py  archiver.py  content_writer.py  quality_checker.py  style_learner.py  style_scorer.py  topic_finder.py
backend/: main.py
backend/routes/: articles.py  generate.py  settings.py  style.py
config/: schedule.yaml  style.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: DashboardView.vue  GenerateView.vue  SettingsView.vue  StyleView.vue
prompts/: content_writer.md  quality_checker.md  topic_finder.md
state/: loop_state.json
tests/: test_article_type.py  test_feedback_learning.py  test_quality_checker.py  test_style_learner.py
