[project]
name = "xhs-loop-engineer"
version = "0.1.0"
description = "小红书内容自动化工作流 — Loop Engineering 实战项目"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "mg1094", email = "miao1094@126.com" }
]
keywords = ["loop-engineering", "xiaohongshu", "content-automation", "ai-agent", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.137.2",
    "pyyaml>=6.0",
    "rich>=13.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
xhs-loop = "xhs_loop_engineer:main"

[project.urls]
Homepage = "https://github.com/mg1094/xhs-loop-engineer"
Repository = "https://github.com/mg1094/xhs-loop-engineer"
Issues = "https://github.com/mg1094/xhs-loop-engineer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=9.1.0",
]
